--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flame: ^1.0.0-releasecandidate.15
+  flame_forge2d: ^0.8.2-releasecandidate.15
 
 dev_dependencies:
   flutter_test:
